✨ feat(cache): implement idempotency interceptor
- add `IdempotencyInterceptor` to handle idempotent requests
- use `x-idempotency-key` header and request body hash for idempotency checks
- cache results for 24 hours to prevent duplicate operations
- throw `ConflictException` if idempotency key is reused with a different payload

🐛 fix(server): enable cors and validation pipe

- enable cors with specific headers and methods for broader compatibility
- add `ValidationPipe` for automatic request data validation and transformation
- configure `NODE_ENV` to determine production vs. development settings for cors and validation

♻️ refactor(database): configure multi-database and redis cache

- setup TypeORM for both PostgreSQL and MongoDB connections
- configure global Redis cache using `cache-manager` for improved performance
- ensure proper injection of `ConfigService` for environment variable access
- set up entities loading based on database type for better organization
- configure logging based on `NODE_ENV` for development and production environments

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,16 @@
     "strictBindCallApply": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
-      "@/*": ["./src/*"]
+      "@/modules/*": ["./src/modules/*"],
+      "@/config/*": ["./src/config/*"],
+      "@/database/*": ["./src/database/*"],
+      "@/dto/*": ["./src/dto/*"],
+      "@/entities/*": ["./src/entities/*"],
+      "@/shared/*": ["./src/shared/*"],
+      "@/utils/*": ["./src/utils/*"],
+      "@/assets/*": ["./src/assets/*"],
+      "@/common/*": ["./src/common/*"],
+      "@/styles/*": ["./src/styles/*"]
     }
   },
   "include": ["src/**/*"],
